Commit 5.0. Adaptivity Profits-Footer

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </section>
         <section class="brand">
             <div class="container brand-container">
-                <h2 class="title brand-title">
+                <h2 class="subtitle brand-title">
                     The preferred localization tool of 1500+ companies
                 </h2>
                 <ul class="list brand-list">
@@ -152,7 +152,7 @@
                 </ul>
             </div>
         </section>
-        <!-- <section class="examples">
+        <section class="examples">
             <div class="container">
                 <h2 class="subtitle examples__subtitle">
                     What can you localize with Lokalise?
@@ -202,8 +202,8 @@
                     </li>
                 </ul>
             </div>
-        </section> -->
-        <!-- <section class="productivity">
+        </section>
+        <section class="productivity">
             <div class="container">
                 <h2 class="subtitle productivity__subtitle">
                     Boost your localization team’s productivity tenfold
@@ -213,36 +213,42 @@
                         <div class="image-box">
                             <img src="images/managers.png" alt="managers-icon" class="productivity__card-image productivity__card-image_1">
                         </div>
-                        <h3 class="productivity__card-title">Managers</h3>
-                        <p class="text productivity__card-text">
-                            Update existing and launch new features and products while simultaneously localizing them in multiple languages. Streamline your team's workflow, maximize productivity, and speed up expansion to other markets.
-                        </p>
-                        <a href="#" class="text underline">Learn more</a>
+                        <div class="subcard">
+                            <h3 class="productivity__card-title">Managers</h3>
+                            <p class="text productivity__card-text">
+                                Update existing and launch new features and products while simultaneously localizing them in multiple languages. Streamline your team's workflow, maximize productivity, and speed up expansion to other markets.
+                            </p>
+                            <a href="#" class="text underline">Learn more</a>
+                        </div>
                     </li>
                     <li class="card productivity__card">
                         <div class="image-box">
                             <img src="images/developers.png" alt="developers-icon" class="productivity__card-image productivity__card-image_2">
                         </div>
-                        <h3 class="productivity__card-title">Developers</h3>
+                        <div class="subcard subcard_2">
+                            <h3 class="productivity__card-title">Developers</h3>
                         <p class="text productivity__card-text">
                             Set up an integration with your code repository or your own custom SDK via Lokalise's <a href="#" class="underline">powerful API</a>. Do that once, and every time you make changes in the code, they'll be automatically imported to Lokalise for translation.
                         </p>
                         <a href="#" class="text underline">Learn more</a>
+                        </div>
                     </li>
                     <li class="card productivity__card">
                         <div class="image-box">
                             <img src="images/translators.png" alt="translators-icon" class="productivity__card-image productivity__card-image_3">
                         </div>
-                        <h3 class="productivity__card-title">Translators</h3>
-                        <p class="text productivity__card-text">
-                            Eliminate double-work and neverending revisions with visual context (screenshots) and live previews. Improve the quality and speed of your translations with built-in CAT tools, like autocomplete, inline machine translation, and translation memory.
-                        </p>
-                        <a href="#" class="text underline">Learn more</a>
+                        <div class="subcard">
+                            <h3 class="productivity__card-title">Translators</h3>
+                            <p class="text productivity__card-text">
+                                Eliminate double-work and neverending revisions with visual context (screenshots) and live previews. Improve the quality and speed of your translations with built-in CAT tools, like autocomplete, inline machine translation, and translation memory.
+                            </p>
+                            <a href="#" class="text underline">Learn more</a>
+                        </div>
                     </li>
                 </ul>
             </div>
-        </section> -->
-        <!-- <section class="feedback">
+        </section>
+        <section class="feedback">
             <div class="container feedback__container">
                 <div class="feedback__card">
                     <p class="feedback__text">
@@ -257,26 +263,28 @@
                 </div>
                 <img src="images/photo.png" alt="photo" class="feedback__photo">
             </div>
-        </section> -->
-        <!-- <section class="rating">
+        </section>
+        <section class="rating">
             <div class="container rating__container">
                 <img src="images/cake.png" alt="cake" class="rating__image">
                 <p class="rating__text">
                     The most-loved translation management software
                 </p>
-                <div class="rating__card rating__card_line">
-                    <img src="images/g2.png" alt="g2-logo" class="rating__icon">
-                    <img src="images/stars.png" alt="stars" class="rating__rate">
-                    <p class="rating__description">USERS LOVE US</p>
-                </div>
-                <div class="rating__card">
-                    <img src="images/capterra.png" alt="capterra-logo" class="rating__icon">
-                    <img src="images/stars.png" alt="stars" class="rating__rate">
-                    <p class="rating__description">HIGHEST RATED</p>
+                <div class="rating-box">
+                    <div class="rating__card rating__card_line">
+                        <img src="images/g2.png" alt="g2-logo" class="rating__icon">
+                        <img src="images/stars.png" alt="stars" class="rating__rate">
+                        <p class="rating__description">USERS LOVE US</p>
+                    </div>
+                    <div class="rating__card">
+                        <img src="images/capterra.png" alt="capterra-logo" class="rating__icon">
+                        <img src="images/stars.png" alt="stars" class="rating__rate">
+                        <p class="rating__description">HIGHEST RATED</p>
+                    </div>
                 </div>
             </div>
-        </section> -->
-        <!-- <section class="integrate">
+        </section>
+        <section class="integrate">
             <div class="container">
                 <h1 class="title integrate__title">Integrate Lokalise with your work tools</h1>
                 <p class="text integrate__text">
@@ -287,8 +295,8 @@
                     See all integrations
                 </button>
             </div>
-        </section> -->
-        <!-- <section class="try">
+        </section>
+        <section class="try">
             <div class="container">
                 <h1 class="title try__title">Localization made easy. Why wait?</h1>
                 <p class="text try__text">
@@ -296,9 +304,9 @@
                 </p>
                 <button class="button try__button">Try it free</button>
             </div>
-        </section> -->
+        </section>
     </main>
-    <!-- <footer class="footer">
+    <footer class="footer">
         <div class="container">
             <div class="footer__box footer__box_1">
                 <div class="footer__card">
@@ -488,6 +496,6 @@
                 </div>
             </div>
         </div>
-    </footer> -->
+    </footer>
 </body>
 </html>
